--- a/client/ecommerce/src/app/signup/signup.component.html
+++ b/client/ecommerce/src/app/signup/signup.component.html
@@ -3,7 +3,6 @@
         <img src="../../assets/logocb.png" class="card-img-top" alt="logo">
         <div class="card-body">
             <h5 class="card-title">Sign up</h5>
-            
                 <div class="form-group">
                     <label for="exampleInputEmail1">Name</label>
                     <input [(ngModel)]="NUEVO.nombre" type="text" class="form-control" id="InputName">
@@ -14,7 +13,7 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input [(ngModel)]="NUEVO.correo" type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
+                    <input [(ngModel)]="NUEVO.correo" type="text" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
@@ -43,9 +42,6 @@
                 </div>
                 <button class="btn btn-primary" (click)="insertarUsuario()">Submit</button>
             
-        </div>
-        <div class="card-body">
-            <a href="#" class="card-link">Forgot your password?</a>
         </div>
     </div>
 </div>
