--- a/client/ecommerce/src/app/headerb/headerb.component.html
+++ b/client/ecommerce/src/app/headerb/headerb.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-header">
   <a class="navbar-brand" href="/settings"><img src="{{usuario.fotografia}}" alt="producto" style="width: 35px;height: 35px; object-fit: none;border-radius: 50%;"><span> {{usuario.nombre}}</span></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" (click)="isShown = !isShown" [attr.aria-expanded]="isShown" aria-label="Toggle navigation" id="navButton">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+  <div class="collapse navbar-collapse" [ngClass]="{ 'show': isShown }" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/feed">Products</a>
-      <a class="nav-item nav-link" *ngIf="usuario.tipo_usuario != 1" href="/myproducts">My Products</a>
-      <a class="nav-item nav-link" *ngIf="usuario.tipo_usuario == 1" href="/users">Users</a>
-      <a class="nav-item nav-link" *ngIf="usuario.tipo_usuario == 1" href="/reports">Reports</a>
-      <a class="nav-item nav-link" *ngIf="usuario.tipo_usuario == 1" href="/log">log</a>
-      <a class="nav-item nav-link" href="/home" (click)="logOut()">Log out</a>
+      <a class="nav-item nav-link" (click)="isShown = false" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" (click)="isShown = false" routerLink="/feed">Products</a>
+      <a class="nav-item nav-link" (click)="isShown = false" *ngIf="usuario.tipo_usuario != 1" routerLink="/myproducts">My Products</a>
+      <a class="nav-item nav-link" (click)="isShown = false" *ngIf="usuario.tipo_usuario == 1" routerLink="/users">Users</a>
+      <a class="nav-item nav-link" (click)="isShown = false" *ngIf="usuario.tipo_usuario == 1" routerLink="/reports">Reports</a>
+      <a class="nav-item nav-link" (click)="isShown = false" *ngIf="usuario.tipo_usuario == 1" routerLink="/log">log</a>
+      <a class="nav-item nav-link" (click)="isShown = false"  routerLink="/home" (click)="logOut()">Log out</a>
     </div>
   </div>
 </nav>
