--- a/client/ecommerce/src/app/landing/landing.component.html
+++ b/client/ecommerce/src/app/landing/landing.component.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="75%" src="https://www.youtube.com/embed/wDBIg2vBDVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="75%" src="../../assets/presentacion.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
