--- a/client/ecommerce/src/app/signin/signin.component.html
+++ b/client/ecommerce/src/app/signin/signin.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="card centrar" style="width: 30rem;">
+<div class="container-sm">
+    <div class="card centrar" style="max-width: 30rem; min-width: 20rem;">
         <img src="../../assets/logocb.png" class="card-img-top" alt="logo">
         <div class="card-body">
             <h5 class="card-title ">Sign In</h5>
