--- a/client/ecommerce/src/app/signup/signup.component.html
+++ b/client/ecommerce/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="card centrar" style="width: 30rem;">
+    <div class="card centrar" style="min-width: 20rem;">
         <img src="../../assets/logocb.png" class="card-img-top" alt="logo">
         <div class="card-body">
             <h5 class="card-title">Sign up</h5>
