--- a/client/ecommerce/src/app/users/users.component.html
+++ b/client/ecommerce/src/app/users/users.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-12 col-md-6">
             <div class="card border-info mb-3" style="max-width: 35rem;">
                 <div class="card-header">New User</div>
                 <div class="card-body text-info">
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="col" *ngIf="actualizar == true">
+        <div class="col-12 col-md-12" *ngIf="actualizar == true">
             <div class="card border-info mb-3" style="max-width: 35rem;">
                 <div class="card-header">Update User</div>
                 <div class="card-body text-info">
@@ -86,30 +86,32 @@
         </div>
     </div>
     <div class="row">
-        <table class="table">
-            <thead class="thead-dark">
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Genre</th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let usuario of ELEMENT_DATA; let i = index">
-                    <th scope="row">{{i+1}}</th>
-                    <td>{{usuario.nombre}}</td>
-                    <td>{{usuario.apellido}}</td>
-                    <td>{{usuario.correo}}</td>
-                    <td>{{usuario.genero}}</td>
-                    <td style="text-align: right;">
-                        <button class="btn btn-info" (click)="upUsuario(true, usuario)">Update</button>
-                        <button class="btn btn-warning" (click)="deleteUser(usuario.id_usuario)">Delete</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="col">
+            <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Genre</th>
+                    <th scope="col"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let usuario of ELEMENT_DATA; let i = index">
+                        <th scope="row">{{i+1}}</th>
+                        <td>{{usuario.nombre}}</td>
+                        <td>{{usuario.apellido}}</td>
+                        <td>{{usuario.correo}}</td>
+                        <td>{{usuario.genero}}</td>
+                        <td style="text-align: right;">
+                            <button class="btn btn-info" (click)="upUsuario(true, usuario)">Update</button>
+                            <button class="btn btn-warning" (click)="deleteUser(usuario.id_usuario)">Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
